solve tag-input-body-container overflow conflict

--- a/src/react/components/common/tagInput/tagInput.scss
+++ b/src/react/components/common/tagInput/tagInput.scss
@@ -36,6 +36,10 @@
 
             &-container {
                 overflow-x: visible;
+                overflow-y: auto;
+                padding: 0 0 0 100px;
+                margin: 0 0 0 -100px;
+
             };
         }
 
