--- a/src/react/components/pages/editorPage/canvas.scss
+++ b/src/react/components/pages/editorPage/canvas.scss
@@ -22,6 +22,7 @@
   background-color: $darker-1;
   border: solid 1px $lighter-2;
   color: rgb(0, 161, 241);
+  z-index: 10;
 
   &:hover, &.active {
     background-color: $darker-2;
